<?xml version="1.0"?>
<package>
  <name>support_surface_saver</name>
  <version>0.1.0</version>
  <description>Saves support surfaces</description>

  <author email="enrico.piazza@polimi.it">Enrico Piazza</author>
  <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>


